--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -4,11 +4,62 @@
   box-sizing: border-box;
 }
 
+  :root {
+    --white: #FFFFFF;
+  
+    --gray-100: #E1E1E6;
+    --gray-300: #A8A8B3;
+    --gray-400: #737380;
+    --gray-800: #29292E;
+    --gray-850: #1F2729;
+    --gray-900: #121214;
+    
+  
+    --cyan-500: #61DAFB;
+    --green-200: #A4D361;
+    --yellow-500: #EBA417;
+    
+  }
+
+  @media (max-width: 1080px) {
+    html {
+      font-size: 93.75%;
+    }
+  }
+
+  @media (max-width: 720px) {
+    html {
+      font-size: 87.5%;
+    }
+  }
+
+
 body {
   background: #F8F8F8;
   color: #29292E;
 }
 
-body, input , button, textarea {
+body, input, textarea, button {
   font: 400 16px 'Roboto', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 600;
+}
+
+h1 {
+  font-size: 2rem;
+}
+
+h2 {
+  font-size: 1.5rem;
+}
+
+button {
+  cursor: pointer;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
